Fixed mobile view of purchase modal. Attached modal controller to collapsed mobile menu so the purchase modal can be opened.

--- a/app/views/components/navbar/navbar.css
+++ b/app/views/components/navbar/navbar.css
@@ -59,3 +59,12 @@
 .exit-icon:hover {
 	cursor: pointer;
 }
+.collapsed-menu-purchase-btn:hover {
+	cursor: pointer;
+}
+
+@media screen and (max-width: 545px) {
+	.modal-content {
+		height: 375px;
+	}
+}
